--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Bruin Hyperloop"
+      content="The offical Bruin Hyperloop Website."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Bruin Hyperloop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
